--- a/tools/markdown-reader.html
+++ b/tools/markdown-reader.html
@@ -156,14 +156,14 @@
 
         // load settings
         function loadSettings(){
-            const theme = getSetting("theme");
+            const theme = Settings.getSetting("theme");
             if (theme) document.body.className = theme;
 
             const root = document.documentElement;
 
-            const editorFont = getSetting("editorFont");
-            const paragraphFont = getSetting("paragraphFont");
-            const titleFont = getSetting("titleFont");
+            const editorFont = Settings.getSetting("editorFont");
+            const paragraphFont = Settings.getSetting("paragraphFont");
+            const titleFont = Settings.getSetting("titleFont");
 
             if (editorFont) root.style.setProperty("--font-editor", editorFont);
             if (paragraphFont) root.style.setProperty("--font-text", paragraphFont);
@@ -171,11 +171,11 @@
         }
 
         function changeTheme() {
-            let current = getSetting('theme');
+            let current = Settings.getSetting('theme');
             if (current === 'theme-dark') {
-                setSetting('theme', 'theme-light');
+                Settings.setSetting('theme', 'theme-light');
             } else {
-                setSetting('theme', 'theme-dark');
+                Settings.setSetting('theme', 'theme-dark');
             }
             loadSettings();
         }
@@ -226,7 +226,7 @@
                     const src = el.getAttribute("src");
                     if (src && src.startsWith("resources/")) {
                         const fileName = src.slice(10);
-                        const dataUrl = await resolveFSItem(fileName);
+                        const dataUrl = await Resources.resolveFSItem(fileName);
                         if (dataUrl) el.src = dataUrl;
                     }
                 }
@@ -252,7 +252,7 @@
                             const src = el.getAttribute("src");
                             if (src && src.startsWith("resources/")) {
                                 const fileName = src.slice(10);
-                                const dataUrl = await resolveFSItem(fileName);
+                                const dataUrl = await Resources.resolveFSItem(fileName);
                                 if (dataUrl) el.src = dataUrl;
                             }
                         }
@@ -278,7 +278,7 @@
                         const src = el.getAttribute("src");
                         if (src && src.startsWith("resources/")) {
                             const fileName = src.slice(10);
-                            const dataUrl = await resolveFSItem(fileName);
+                            const dataUrl = await Resources.resolveFSItem(fileName);
                             if (dataUrl) el.src = dataUrl;
                         }
                     }
@@ -305,7 +305,7 @@
                             const src = el.getAttribute("src");
                             if (src && src.startsWith("resources/")) {
                                 const fileName = src.slice(10);
-                                const dataUrl = await resolveFSItem(fileName);
+                                const dataUrl = await Resources.resolveFSItem(fileName);
                                 if (dataUrl) el.src = dataUrl;
                             }
                         }
