--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <hr />
                         <button class="text-button" onmouseup="handleInsertBlock(); hideAllMenus();">Block</button>
                         <button class="text-button" onmouseup="promptTableSelector().then((markdown) => {if (markdown) {insertBlock(markdown);}}); hideAllMenus()">Table</button>
-                        <button class="text-button" onmouseup="insertBlock(getSummary(editor.getValue())); hideAllMenus()">Summary</button>
+                        <button class="text-button" onmouseup="insertBlock(getSummary(editor.getValue())); hideAllMenus()">Table of Contents</button>
                         <button class="text-button" onmouseup="insertAtTop(getMeta()); hideAllMenus();">
                             Document meta
                             <kbd>Ctrl+;</kbd>
